[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pktperf"
version = "0.5.2"
authors = [
  { name="junka", email="wan.junjie@foxmail.com" },
]
description = "pktgen scripts tool"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "ipaddress",
]

[project.scripts]
pktperf = "pktperf.pktperf:main"

[project.urls]
"Homepage" = "https://github.com/junka/pktperf"
"Bug Tracker" = "https://github.com/junka/pktperf/issues"